# image_to_cnc

./: .gitignore  README.css  README.md
converter/: .gitignore  Cargo.toml  README.md  cli.yml
converter/src/: args_parse.rs  canny.rs  lib.rs  main.rs
simulator/: .gitignore  Cargo.toml  README.md
simulator/src/: colors.rs  main.rs  tracer.rs
