[package]
name = "converter"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "CNC Converter"

[dependencies]
# common
rand = "0.8.4"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
rusttype = "0.9.2"
# argument parser
clap = { version = "3.0.0-beta.1", features = ["std", "color", "suggestions", "cargo", "derive", "wrap_help", "unicode"] }
# imageproc undocumented dependencies?
sdl2 = { version = "0.34.2", optional = true, default-features = false, features = ["bundled", "static-link"] }
sdl2-sys = { version = "0.34.2", features = ["bundled", "static-link"] }
# image & imageproc
imageproc = { version = "0.22.0", features = ["display-window"] }
image = "0.23.14"

[features]
display-window = ["sdl2"]