[package]
name = "converter"
version = "0.1.1"
edition = "2021"
resolver = "2"
description = "CNC Converter"

[dependencies]
# common
rand = "0.8.4"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
rusttype = "0.9.2"
# argument parser
clap = { version = "3.0.0-beta.1", features = ["std", "color", "suggestions", "cargo", "derive", "wrap_help", "unicode"] }
# image & imageproc
imageproc = { version = "0.22.0" }
image = "0.23.14"
